@@ -1,9 +1,9 @@
 <html>
 	<body>	
-		<center><h1>Armitage 1.43-dev</h1></center>
+		<center><h1>Armitage 1.43</h1></center>
 
 		<p>An attack management tool for Metasploit&reg;
-		<br />Release: 16 Apr 12</p>
+		<br />Release: 17 Apr 12</p>
 		<br />
 		<p>Developed by:</p>
 
